fix footer text misalignment with design

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -602,7 +602,6 @@ body::-webkit-scrollbar {
 }
 .inquiry-fields input,
 .inquiry-fields textarea {
-
     max-width: 100%;
     padding: 1.1rem 1.5rem;
     max-height: 3.84875rem;
@@ -753,8 +752,9 @@ body::-webkit-scrollbar {
 .footer--right {
     display: flex;
     flex-direction: row;
-    gap: 10.8125rem;
-    margin-right: 0.5rem;
+    gap: 10.875rem;
+    margin-right: 0.8125rem;
+    margin-top: -0.0625rem;
 }
 
 .footer--pages{
@@ -792,20 +792,26 @@ body::-webkit-scrollbar {
     list-style: none;
 }
 
-.footer--pages ul ::before,
+.footer--pages ul ::before{
+    content: '▸';
+    color: rgba(215, 219, 255, 1); 
+    margin-right:0.5625rem;
+}
 .footer--informations ul ::before {
     content: '▸';
     color: rgba(215, 219, 255, 1); 
-    margin-right:7px;
+    margin-right:0.5625rem;
 }
 
 
 .footer--pages ul li{
     margin-bottom: 0.6875rem;
+    letter-spacing: 1.6px;
 
 }
 .footer--informations ul li{
     margin-bottom: 0.6875rem;
+    letter-spacing: 1.6px;
 }
 
 .footer--copyright {
@@ -937,7 +943,7 @@ body::-webkit-scrollbar {
     }
     
     .footer--right {
-        justify-content:space-around;
+        justify-content:space-between;
         align-items: center;
         gap: 2rem;
         
